--- a/ThreePhaseInverter.build_log.htm
+++ b/ThreePhaseInverter.build_log.htm
@@ -20,7 +20,7 @@ compiling main.c...
   //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
 stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
   //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-PWM_control.h(45): warning:  #1-D: last line of file ends without a newline
+PWM_control.h(50): warning:  #1-D: last line of file ends without a newline
   #endif /*__PWM_H */
 ADC_control.h(37): warning:  #1295-D: Deprecated declaration ADC_Common_config - give arg types
   void ADC_Common_config();
@@ -34,9 +34,9 @@ Communication.h(35): warning:  #1-D: last line of file ends without a newline
   #endif /*__Communication_H */
 main.c(47): warning:  #188-D: enumerated type mixed with another type
                 GPIO_WriteBit(GPIOB,GPIO_Pin_2,P5V_driver);
-main.c(178): warning:  #177-D: variable "i" was declared but never referenced
+main.c(192): warning:  #177-D: variable "i" was declared but never referenced
                 uint8_t i =0;
-main.c(220): warning:  #1-D: last line of file ends without a newline
+main.c(263): warning:  #1-D: last line of file ends without a newline
   }
 main.c: 11 warnings, 0 errors
 compiling PWM_control.c...
@@ -44,11 +44,15 @@ compiling PWM_control.c...
   //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
 ..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
   //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-PWM_control.h(45): warning:  #1-D: last line of file ends without a newline
+PWM_control.h(50): warning:  #1-D: last line of file ends without a newline
   #endif /*__PWM_H */
-PWM_control.c(345): warning:  #940-D: missing return statement at end of non-void function "Motor_Startup"
+PWM_control.c(346): warning:  #940-D: missing return statement at end of non-void function "Motor_Startup"
   }
-PWM_control.c: 4 warnings, 0 errors
+PWM_control.c(350): warning:  #177-D: variable "One_Step_time" was declared but never referenced
+        static int One_Step_time=0;//save last one step time by using static variable
+PWM_control.c(351): warning:  #177-D: variable "pre_One_Step_time" was declared but never referenced
+        static int pre_One_Step_time=0;
+PWM_control.c: 6 warnings, 0 errors
 compiling ADC_control.c...
 ..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
   //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
@@ -58,12 +62,12 @@ ADC_control.h(37): warning:  #1295-D: Deprecated declaration ADC_Common_config -
   void ADC_Common_config();
 ADC_control.h(48): warning:  #1-D: last line of file ends without a newline
   #endif /*__ADC_CONTROL_H */
-PWM_control.h(45): warning:  #1-D: last line of file ends without a newline
+PWM_control.h(50): warning:  #1-D: last line of file ends without a newline
   #endif /*__PWM_H */
 I_O_control.h(41): warning:  #1-D: last line of file ends without a newline
   #endif /*__I_O_CONTROL_H */
 ADC_control.c(98): warning:  #1293-D: assignment in condition
-        if(Start_up == 1 && (Step=Old_step)){
+        if(Start_up > 0 && (Step=Old_step)){
 ADC_control.c: 7 warnings, 0 errors
 compiling DMA_control.c...
 ..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
@@ -72,7 +76,7 @@ compiling DMA_control.c...
   //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
 DMA_control.h(35): warning:  #1-D: last line of file ends without a newline
   #endif /*__DMA_CONTROL_H */
-DMA_control.c(85): warning:  #1-D: last line of file ends without a newline
+DMA_control.c(95): warning:  #1-D: last line of file ends without a newline
   }
 DMA_control.c: 4 warnings, 0 errors
 compiling I_O_control.c...
@@ -178,46 +182,16 @@ compiling stm32f0xx_usart.c...
   //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
 STM32F0xx_StdPeriph_Driver\src\stm32f0xx_usart.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=14728 RO-data=224 RW-data=108 ZI-data=1652  
-".\ThreePhaseInverter.axf" - 0 Error(s), 66 Warning(s).
+Program Size: Code=14852 RO-data=224 RW-data=116 ZI-data=1652  
+".\ThreePhaseInverter.axf" - 0 Error(s), 68 Warning(s).
 Load "D:\\Motor\\3 phase motor\\3phase_inverter\\ThreePhaseInverter.axf" 
 Erase Done.
 Programming Done.
 Verify OK.
-has been cancelled
-Load "D:\\Motor\\3 phase motor\\3phase_inverter\\ThreePhaseInverter.axf" 
+</pre>
+</body>
+</html>
+D:\\Motor\\3 phase motor\\3phase_inverter\\ThreePhaseInverter.axf" 
 Erase Done.
 Programming Done.
 Verify OK.
-...
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-STM32F0xx_StdPeriph_Driver\src\stm32f0xx_syscfg.c: 2 warnings, 0 errors
-compiling stm32f0xx_misc.c...
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-STM32F0xx_StdPeriph_Driver\src\stm32f0xx_misc.c: 2 warnings, 0 errors
-compiling stm32f0xx_adc.c...
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-STM32F0xx_StdPeriph_Driver\src\stm32f0xx_adc.c: 2 warnings, 0 errors
-compiling stm32f0xx_dma.c...
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-STM32F0xx_StdPeriph_Driver\src\stm32f0xx_dma.c: 2 warnings, 0 errors
-compiling stm32f0xx_usart.c...
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-..\3phase_inverter\stm32f0xx.h(5709): warning:  #1-D: last line of file ends without a newline
-  //************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****// 
-STM32F0xx_StdPeriph_Driver\src\stm32f0xx_usart.c: 2 warnings, 0 errors
-".\ThreePhaseInverter.axf" - 16 Error(s), 66 Warning(s).
-Target not created
